--- a/index.html
+++ b/index.html
@@ -9,6 +9,6 @@
   <body>
     <div id="app"></div>
     <script src="https://cdn.tailwindcss.com"></script>
-    <script type="module" src="/src/main.js"></script>
+    <script type="module" src="./src/main.js"></script>
   </body>
 </html>
